# py-homelab

./: .gitignore  README.md  pyproject.toml
py_homelab/: app.py  cli.py  map.py  pm.py  web.py
py_homelab/database/: main.py  models.py
py_homelab/resources/: main.py
tests/: test_py_homelab.py
