[tool.poetry]
name = "py-homelab"
version = "0.1.0"
description = ""
authors = ["Theo Paris <theoparisdesigns@gmail.com>"]

[tool.poetry.dependencies]
python = ">3.7"
json5 = "^0.9.5"
urwid = "^2.1.2"
pymongo = "^3.11.0"
Flask = "^1.1.2"
GitPython = "^3.1.9"

[tool.poetry.dev-dependencies]
pytest = "^4.6"
autopep8 = "^1.5.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
cli = "py_homelab.cli:main"
web = "py_homelab.web:main"
